# sgbf

./: .dockerignore  .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  VERSION_UPDATES.md  shell.nix
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yaml  helm-docs.yaml  release.yaml
.release-scripts/: update-versions.sh
charts/sgbf/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/sgbf/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  api-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml
frontend/: .env  .env.production  Dockerfile  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.vue  api.ts  main.ts  model.ts
frontend/src/components/: ReservationDay.vue
frontend/src/locales/: de.json  en.json
frontend/src/router/: index.ts
frontend/src/stores/: reservation.ts  settings.ts  startlist.ts
frontend/src/views/: Login.vue  PreflightChecklist.vue  ReservationCalendar.vue  Settings.vue  StartList.vue
k8s/: ambassador.yaml  deploy.yaml  ingress.yaml  kustomization.yaml  service.yaml
k8s/api/: deploy.yaml
k8s/frontend/: deploy.yaml
ogn/: Cargo.toml
ogn/src/: main.rs
sgbf-api/: Cargo.toml  Dockerfile  client.http  config.yaml  http-client.env.json
sgbf-api/migrations/: 001_initial_schema.sql
sgbf-api/src/: cache.rs  config.rs  lib.rs  main.rs  onesignal.rs  routes.rs  server.rs  state.rs  store.rs  tracing.rs
sgbf-api/src/routes/: members.rs  reservation.rs
sgbf-api/src/routes/reservation/: calendar.rs  reservations.rs
sgbf-cli/: Cargo.toml
sgbf-cli/src/: main.rs
sgbf-client/: Cargo.toml
sgbf-client/benches/: parse.rs
sgbf-client/src/: client.rs  lib.rs  main.rs  model.rs  parsing.rs
sgbf-client/src/model/: aircraft.rs
sgbf-client/src/parsing/: calendar.rs  day.rs  members.rs  menu.rs  reservation.rs
sgbf-client/tests/data/: calendar.html  reservations.html
