[package]
name = "sgbf-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# common libraries
anyhow = "1.0.71"
config = { version = "0.13.3", features = ["yaml"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = { version = "1" }
sgbf-client = { path = "../sgbf-client", features = ["axum"] }

# async runtime
tokio = { version = "1", features = ["full"] }

# axum & tower
axum = { version = "0.6", features = ["headers", "http2"] }
axum-client-ip = "0.4"
axum-macros = "0.3"
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-layer = "0.3"
tower-http = { version = "0.4", features = ["add-extension", "auth", "compression-full", "limit", "trace", "cors", "catch-panic"] }
hyper = "0.14"
# for libraries
# axum-core = "0.3"

# tracing
tracing = { version = "0.1", features = ["log"] }
log = { version = "0.4", features = ["max_level_info", "release_max_level_info"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
tracing-error = { version = "0.2", features = ["traced-error"] }
# error reporting
sentry = "0.31"
sentry-tracing = "0.31"
# otel harness
tracing-opentelemetry = "0.18"
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11", features = ["tokio", "metrics"] }
opentelemetry_sdk = "0.18"
firestore = "0.32.2"
sha2 = "0.10.6"
