[package]
name = "sgbf-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["headers", "http2"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
cli-table = "0.4.7"
config = { version = "0.13.3", features = ["yaml"] }
dialoguer = "0.10.4"
hyper = "0.14.26"
reqwest = { version = "0.11", default-features = false, features = ["json", "cookies", "rustls-tls"] }
scraper = "0.16.0"
serde = { version = "1", features = ["serde_derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.17"
axum-core = "0.3"
axum-client-ip = "0.4"
axum-macros = "0.3"
