[package]
name = "sgbf-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.13.3", features = ["yaml"] }
serde = { version = "1", features = ["serde_derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "cookies", "rustls-tls"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
axum = { version = "0.6", optional = true }
scraper = "0.16.0"
