[package]
name = "sgbf-client"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["serde_derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
serde_json = { version = "1" }
tokio = { version = "1" }
tracing = { version = "0.1" }
axum = { version = "0.6", optional = true }
tower = { version = "0.5", optional = true }
scraper = "0.24.0"
thiserror = { version = "2" }
itertools = "0.14.0"
regex = "1.8.4"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "parse"
harness = false
